src/styles/global.css
/* Put */
:root {
    --font-body: 'Archivo Variable', sans-serif;
    --color-text: var(--color-brown800);
    font-size: 16px;

    /* Default font */
    font-family: var(--font-body);
    color: var(--color-text);
    --layout-width: 70rem;
    --layout-padding: 2rem;

    --mobile-width: 768px;
}

* {
    box-sizing: border-box;
}

html,
body {
    overscroll-behavior: auto;
    background-color: #fcf3f0;
}

h1,
h2,
h3,
hr,
p {
    margin: 0;
}

h1 {
    font-size: 4rem;
}

h2 {
    font-size: 2.5rem;
}

h3 {
    font-size: 1.5rem;
}

body {
    margin: 0;
    background-size: 100vw 100vh;
    overflow: auto;
    height: 100%;
}

p {
    line-height: 1.5;
}

a {
    color: var(--color-text);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

input,
button {
    font-size: inherit;
    font-family: inherit;
}

/* Preserve focus outline when the button is focused via keyboard navigation but not on click */
button:focus:not(:focus-visible) {
    outline: none;
}

/* Mobile XS: 0-470px */
@media screen and (max-width: 470px) {
    .hide-mobile-xs {
        display: none !important;
    }
}

/* Mobile: 471px-591px */
@media screen and (min-width: 471px) and (max-width: 591px) {
    .hide-mobile {
        display: none !important;
    }
}

/* Tablet: 592px-920px */
@media screen and (min-width: 592px) and (max-width: 920px) {
    .hide-tablet {
        display: none !important;
    }
}

/* Desktop Small: 921px-1016px */
@media screen and (min-width: 921px) and (max-width: 1016px) {
    .hide-ds {
        display: none !important;
    }
}

/* Desktop Medium: 1017px-1208px */
@media screen and (min-width: 1017px) and (max-width: 1208px) {
    .hide-dm {
        display: none !important;
    }
}

/* Desktop Large: 1209px+ */
@media screen and (min-width: 1209px) {
    .hide-dl {
        display: none !important;
    }
}

